apps/talos_cluster/convex/cors_middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: convex-headers
  namespace: convex
spec:
  headers:
    accessControlAllowMethods:
      - "*"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
    addVaryHeader: true
    accessControlAllowCredentials: true
